# Re-Pokemon-Red

./: .cmake_compile  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_interactive_docker_image.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/.build-caching/: README.md
.github/workflows/: README.md  clang-format.yml  pull_request_checks.yml
Docker/: Dockerfile  README.md  run_dockerfile_unix.sh  run_dockerfile_windows.bat
Docker/unix/: build_docker_image.sh
Docker/windows/: build_docker_image.bat
documentation/: CODE_STYLE.md  DOCKER.md
game/: CMakeLists.txt
game/include/: Interaction.hpp  JsonReader.hpp  Map.hpp  Movement.hpp  Tile.hpp  utils.hpp
game/src/: Map.cpp  Movement.cpp  Tile.cpp  main.cpp
include/: Map.h  Map.hpp  Tile.hpp  utils.hpp
src/: Map.cpp  Tile.cpp
test/: MapTest.cpp  README.md
tests/: CMakeLists.txt  README.md
tests/unit-tests/: MapTest.cpp  example_test.cpp  ui_Movement.cpp
